# wormvars

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
flash/: CMakeLists.txt  FlashMock.cc  FlashMock.h  flash.c  flash.cc  flash.h
include/: crc32.h  debug.h  flash.h  timer.h  type.h
ll_mock/: CMakeLists.txt  FlashMock.cc  FlashMock.h  crc32.c  flash.cc  timer.c
src/: wormvars.c  wormvars.h  wvars_structs.h
test/: CMakeLists.txt  FlashMockTest.cc  WormvarsTest.cc  test.cc
uml/: fs_write.plantuml  wormvars.plantuml
wormvars/: CMakeLists.txt  wormvars.c  wormvars.h  wvars_structs.h
